@@ -1,0 +1,4 @@
+module M = Set.Make(struct
+        type t = int
+        let compare = compare
+end)
